bug: id on button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <button id: testButton>test</button>
+        <button id="testButton">test2</button>
     </main>
 
 </body>
